# solids

./: 5_piece_mould.ipynb  README.md  clean_torus_mould.ipynb  geometry.py  helpers.py  pyproject.toml
